// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse should parse a given s-expression and return the AST: LIST 1`] = `
Object {
  "program": Object {
    "begin": Object {
      "col": 0,
      "line": 0,
      "pos": 0,
    },
    "end": Object {
      "col": 17,
      "line": 0,
      "pos": 18,
    },
    "type": "LIST",
    "value": Array [
      Object {
        "begin": Object {
          "col": 1,
          "line": 0,
          "pos": 1,
        },
        "end": Object {
          "col": 2,
          "line": 0,
          "pos": 2,
        },
        "type": "SYMBOL",
        "value": "a",
      },
      Object {
        "begin": Object {
          "col": 3,
          "line": 0,
          "pos": 3,
        },
        "end": Object {
          "col": 11,
          "line": 0,
          "pos": 11,
        },
        "type": "STRING",
        "value": "thanks",
      },
      Object {
        "begin": Object {
          "col": 12,
          "line": 0,
          "pos": 12,
        },
        "end": Object {
          "col": 15,
          "line": 0,
          "pos": 15,
        },
        "type": "NUMBER",
        "value": 123,
      },
      Object {
        "begin": Object {
          "col": 16,
          "line": 0,
          "pos": 16,
        },
        "end": Object {
          "col": 17,
          "line": 0,
          "pos": 17,
        },
        "type": "SYMBOL",
        "value": "b",
      },
    ],
  },
}
`;

exports[`parse should parse a given s-expression and return the AST: SIMPLE-PARSE 1`] = `
Object {
  "program": Object {
    "begin": Object {
      "col": 0,
      "line": 0,
      "pos": 0,
    },
    "end": Object {
      "col": 4,
      "line": 0,
      "pos": 5,
    },
    "type": "LIST",
    "value": Array [
      Object {
        "begin": Object {
          "col": 1,
          "line": 0,
          "pos": 1,
        },
        "end": Object {
          "col": 2,
          "line": 0,
          "pos": 2,
        },
        "type": "SYMBOL",
        "value": "a",
      },
      Object {
        "begin": Object {
          "col": 3,
          "line": 0,
          "pos": 3,
        },
        "end": Object {
          "col": 4,
          "line": 0,
          "pos": 4,
        },
        "type": "SYMBOL",
        "value": "b",
      },
    ],
  },
}
`;
